[package]
name = "cemail-i"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10"
clap = { version = "4.4.2", features = ["derive"] }
regex = "1.9.5"

[profile.release]
strip = true
lto = true
codegen-units = 1